Fix box border overflow on height resize

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,7 @@
+* {
+    border: 1px dotted red;
+}
+
 .App {
     text-align: center;
 }
@@ -42,4 +46,5 @@ html,
 body {
     margin: 0;
     padding: 0;
+    background-color: #242323;
 }
